쿼리 추가: 캡콤

--- a/_archive_tags/캡콤.md
+++ b/_archive_tags/캡콤.md
@@ -1,9 +1,11 @@
 ---
 title: 캡콤
 slug: 캡콤
-abbr: Capcom
-refs:
-  - https://en.wikipedia.org/wiki/Capcom
+abbr: Capcom; カプコン
+queries:
+  en: Capcom
+  ja: カプコン
+  namu: 캡콤
 categories:
   - 게임 로그
 ---
