--- a/_entry_plays/실크송：1회차.md
+++ b/_entry_plays/실크송：1회차.md
@@ -1,6 +1,6 @@
 ---
-title: 실크송 (2025)
-slug: 실크송-2025
+title: 실크송：1회차
+slug: 실크송-1회차
 date: 2025-09-05 16:49:00 +0900
 lastmod: 2025-10-18 19:18:00 +0900
 years:
