--- a/_entry_plays/실크송：모딩.md
+++ b/_entry_plays/실크송：모딩.md
@@ -10,9 +10,9 @@ tags:
   - 팀 체리
   - 실크송 (게임)
   - BepInEx (플러그인)
-excerpt: 업적작을 할 생각은 없으므로, 모드를 깔아서 천천히 갖고 놀기로 한다.
+excerpt: 2회차부터는 모드를 깔아서 천천히 갖고 놀기로 한다. 개성있는 UGC를 원하는 것은 아니므로 디버거·트레이너 정도면 충분하다.
 ---
-[1회차](/실크송-1회차)를 끝내고 
+[1회차](/실크송-1회차)를 끝내고, 특정 보스에 도전한다든지 하는 식으로 느긋하게 놀기 위해서 모드를 적용해봤다.
 
 # Silksong.DebugMod
 
