--- a/_entry_plays/실크송 (2025-09-04).md
+++ b/_entry_plays/실크송 (2025-09-04).md
@@ -1,6 +1,10 @@
 ---
-title: 실크송
-slug: 실크송
+title: 실크송 (2025-09-04)
+slug: 실크송-2025-09-04
+abbr: Hollow Knight：Silksong
+queries:
+  en: Hollow_Knight:_Silksong
+  namu: Hollow%20Knight:%20Silksong
 date: 2025-09-05 16:49:00 +0900
 lastmod: 2025-10-18 19:18:00 +0900
 years:
@@ -11,31 +15,26 @@ tags:
   - 팀 체리
 excerpt: 정성이 가득하고 볼륨도 풍성하다. 전작의 팬으로서 재미있게 플레이했지만 억지스러운 부분이 있어 누구에게나 추천하기는 어렵고, 개발자로서도 마냥 기분이 좋은 제품은 아니었다.
 ---
-# 1회차
+# 1회차 (2025-09-05 ~ 2025-10-15)
 
-2025.10.15.에 완료. 마지막 보스를 잡기 전에 [공략 지도][silksong-map]를 보고 콜렉션을 채웠는데, 육안으로 식별할 수 없는 숨은 통로가 많았다. 총평은:
+마지막 보스를 잡기 전에 [공략 지도][silksong-map]를 보고 콜렉션을 채웠는데, 육안으로 식별할 수 없는 숨은 통로가 많았다. 총평은:
 
 1. 이상한 가격：소비자로서 고마운 가격이나, 생태계 파괴이다[^proper-price].
 2. 이상한 난이도：이 난이도를 고집할 거였다면 볼륨이 크든 작든 DLC로 냈어야 했다.
 3. 이상한 밸런스：초반에 성장을 체감하기 어렵고, 후반에 쓸모없는 것을 준다.
 4. 풍성한 볼륨, 빈약한 빌드：문장이나 도구 등 뭔가 많지만 골고루 쓸 동기가 부족하다.
 
-[silksong-map]: https://www.gamerguides.com/hollow-knight-silksong/maps/pharloom
-
 [^proper-price]: 여유있는 자가 가격을 후려치면 그렇지 못한 동종업계 경쟁자들은 정당한 가격을 받기 어렵다. 
 
-# 2회차
+# 2회차 (2025-10-18 ~ ????-??-??)
 
 특정 보스에 도전한다든지 하는 식으로 느긋하게 놀기 위해서 모드를 적용해봤다.
 
-## Silksong.DebugMod
+| 모드 | 비고 |
+|---|---|
+| [Silksong.DebugMod][silksong-mod-debugmod] | 디버거·트레이너 |
+| [Silksong.QuickWarp][silksong-mod-quickwarp] | 씬 로더 |
 
-<https://github.com/hk-speedrunning/Silksong.DebugMod>
-
-각종 디버그 정보를 보거나 치트 기능을 쓸 수 있다. 
-
-## Silksong.QuickWarp
-
-<https://github.com/hk-speedrunning/Silksong.QuickWarp>
-
-원하는 씬을 불러온다.
+[silksong-map]: https://www.gamerguides.com/hollow-knight-silksong/maps/pharloom
+[silksong-mod-debugmod]: https://github.com/hk-speedrunning/Silksong.DebugMod>
+[silksong-mod-quickwarp]: https://github.com/hk-speedrunning/Silksong.QuickWarp
