Fix formatting in 베르나르 베르베르.md

--- a/_archive_tags/베르나르 베르베르.md
+++ b/_archive_tags/베르나르 베르베르.md
@@ -1,9 +1,9 @@
 ---
 title: 베르나르 베르베르
 slug: 베르나르-베르베르
-abbr: "Bernard Werber"
+abbr: Bernard Werber
 queries:
-  aladin: @18883
+  aladin: 베르나르+베르베르@18883
   imdb: nm1182776
   ko: 베르나르_베르베르
   namu: 베르나르%20베르베르
